added inputmode numeric

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <section class="input-section">
                     <div class="input-group">
                         <span class="detail">R$</span>
-                        <input type="text" class="initial-money" id="initial-money">
+                        <input type="text" inputmode="numeric" class="initial-money" id="initial-money">
                     </div>
                     <div class="input-group">
                         <span class="detail">+ R$</span>
-                        <input type="text" class="add-money" id="add-money">
+                        <input type="text" inputmode="numeric" class="add-money" id="add-money">
                         <button class="confirm" title="Confirmar">
                             <i class="fa-solid fa-circle-check"></i>
                         </button>
