added option Converter Centavos

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
                         </button>
                     </div>
                 </section>
+                <section class="options">
+                    <div class="convert-centavos">
+                        <p>Converter centavos</p>
+                        <label class="check-container">
+                            <input type="checkbox" id="convert-centavos">
+                            <span class="btn-check">
+                                <span class="check"></span>
+                            </span>
+                        </label>
+                    </div>
+                </section>
             </main>
         </div>
 
