added option Animação da Conversão

--- a/index.html
+++ b/index.html
@@ -36,9 +36,18 @@
                 </section>
                 <section class="options">
                     <div class="convert-centavos">
-                        <p>Converter centavos</p>
+                        <p>Converter Centavos</p>
                         <label class="check-container">
                             <input type="checkbox" id="convert-centavos">
+                            <span class="btn-check">
+                                <span class="check"></span>
+                            </span>
+                        </label>
+                    </div>
+                    <div class="convert-centavos">
+                        <p>Animação da Conversão</p>
+                        <label class="check-container">
+                            <input type="checkbox" id="convert-anim">
                             <span class="btn-check">
                                 <span class="check"></span>
                             </span>
