changed Deletar to Resetar in delete btn

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="input-group">
                         <span class="currency-label">R$</span>
                         <input type="text" inputmode="numeric" class="money-input-initial" id="money-input-initial">
-                        <button class="btn-delete tooltip top" id="btn-delete" data-tooltip="Deletar">
+                        <button class="btn-delete tooltip top" id="btn-delete" data-tooltip="Resetar">
                             <i class="fa-solid fa-circle-xmark"></i>
                         </button>
                     </div>
